force-app/main/default/objects/KimbleOne__OpportunityStage__c/KimbleOne__OpportunityStage__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Opportunity Stage</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Stages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>