force-app/main/default/objects/KimbleOne__OpportunityStage__c/fields/KimbleOne__DefaultForecastStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultForecastStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Forecast Status</label>
    <referenceTo>KimbleOne__ForecastStatus__c</referenceTo>
    <relationshipLabel>Opportunity Stages</relationshipLabel>
    <relationshipName>OpportunityStages</relationshipName>
    <type>Lookup</type>
</CustomField>