force-app/main/default/objects/KimbleOne__OpportunityStage__c/fields/KimbleOne__RequiresDeliveryElementForecast__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RequiresDeliveryElementForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Delivery Element Forecast</label>
    <type>Checkbox</type>
</CustomField>