force-app/main/default/objects/KimbleOne__OpportunityStage__c/fields/KimbleOne__Sequence__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The logical sequence that a Sales Opportunity passes through.</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>