force-app/main/default/objects/KimbleOne__OpportunityStage__c/fields/KimbleOne__SequencedName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SequencedName__c</fullName>
    <formula>TEXT(KimbleOne__Sequence__c)  &amp; &quot; - &quot; &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequenced Name</label>
    <type>Text</type>
</CustomField>